Content/css/main.css
@import url(https://fonts.googleapis.com/css?family=Great+Vibes:400);

.container-fluid {
    padding:0;
}

.Absolute-Center {
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

    .Absolute-Center.is-Responsive {
        width: 50%;
        height: 50%;
        min-width: 325px;
        max-width: 400px;
        padding: 40px;
    }

*[hidden] {
    display: none;
}
body, html, .container-fluid, #mBody, #shopfull, #charaEquip {
    height: 100% !important;
    width: 100% !important;
}

.mainCon{
    width:100%;
    height:100%;
    min-height:100%;
    margin:0;
    padding:0;
}

#list {
    background: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    position: relative;
    display: block;
    margin-top: 50px;
    width:100%!important;
}

.item {
    display: block;
    position: absolute;
    color: aqua;
    padding: 5px;
    font-weight: bold;
    cursor:pointer;
}

.layout {
    color: #efefef;
    margin-bottom: 15px;
}
label {
    margin-right: 15px;
    cursor: pointer;
}

label:hover{
    color: #efefef;
}

.navbar-brand{
    cursor:pointer;
}

img.charaImage {
    width: 75px;
    height: auto;
}

.stats {
    height: 0px;
    opacity: 0;
    display: none;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Chrome/Safari/Opera */
    -khtml-user-select: none; /* Konqueror */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                                  not supported by any browser */
}

.armorSlot{
    width:100%;
    height:100%;
    position:fixed;
    background-position:center;
    background-repeat:no-repeat;
    background-size:100% 100%;
    background-color: lightgrey;
    border-radius:8px;
}

.svgContainer,svg{
    width: 100%;
    height: 100%;
    overflow: hidden;
}


.navbar {
    margin: 0 !important;
}

.outline:hover {
    transform: scale(1.05);
    -webkit-transform: scale(1.05);
    transform-origin: center;
    cursor:pointer;
}

body {
    background: no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#shop{
    height:100%;
}

#Button{
    cursor:pointer;
}

.chars {
    filter: url(#colorMeLTA);
    -webkit-filter: url(#colorMeLTA);
    -mos-filter: url(#colorMeLTA);
    transition: filter 2s;
    -webkit-transition: filter 2s;
    -moz-transition: filter 2s;
}

.cActive{
    filter: none;
    cursor: pointer;
    transition: filter 2s;
    -webkit-transition: filter 2s;
    -moz-transition: filter 2s;
}

#Text_x5F_Name {
    background-color: rgba(0,0,0,0);
    color: red;
    border: none;
    font-size: xx-large;
    text-align:center;
}

#fullArm{
    height:auto !important;
    width:100% !important;
}

